# tasks_pool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.circleci/: Dockerfile  config.yml
include/tpool/: tpool.h
src/: CMakeLists.txt  main.cpp  main.cxx  tpool.cpp  tpool.h
test/: CMakeLists.txt  test.cpp
